# scrump

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/scrump-cli/: Cargo.toml
crates/scrump-cli/src/: main.rs
crates/scrump-core/: Cargo.toml
crates/scrump-core/src/: lib.rs
crates/scrump-detect/: Cargo.toml
crates/scrump-format-core/: Cargo.toml
crates/scrump-format-hprof/: Cargo.toml
crates/scrump-format-jfr/: Cargo.toml
crates/scrump-format-nsys/: Cargo.toml
crates/scrump-format-passthrough/: Cargo.toml
crates/scrump-format-pcap/: Cargo.toml
crates/scrump-format-perf/: Cargo.toml
crates/scrump-format-sqlite/: Cargo.toml
crates/scrump-format-sqlite/src/: lib.rs
crates/scrump-format-tar/: Cargo.toml
crates/scrump-presidio-compat/: Cargo.toml
crates/scrump-rules/: Cargo.toml
crates/scrump-rules/src/: lib.rs
crates/scrump-rules/tests/: fn_marquee.rs  fp_regression.rs  noise_audit.rs  structural_heuristic.rs
crates/scrump-test-fixtures/: Cargo.toml
crates/scrump-trufflehog-compat/: Cargo.toml
crates/scrump-trufflehog-compat/src/: main.rs
