[workspace]
resolver = "2"
members = [
    "crates/scrump-core",
    "crates/scrump-detect",
    "crates/scrump-rules",
    "crates/scrump-format-passthrough",
    "crates/scrump-format-perf",
    "crates/scrump-format-tar",
    "crates/scrump-format-sqlite",
    "crates/scrump-format-nsys",
    "crates/scrump-format-core",
    "crates/scrump-format-hprof",
    "crates/scrump-format-jfr",
    "crates/scrump-format-pcap",
    "crates/scrump-cli",
    "crates/scrump-test-fixtures",
    "crates/scrump-trufflehog-compat",
    "crates/scrump-presidio-compat",
]

[workspace.package]
version = "0.1.8"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/avifenesh/scrump"
authors = ["Avi Fenesh"]
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rayon = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
byteorder = "1"
tar = "0.4"
flate2 = "1"
zstd = "0.13"
zip = { version = "8", default-features = false, features = ["deflate"] }
linux-perf-data = "0.13"
object = { version = "0.36", default-features = false, features = ["std", "read_core", "elf"] }
rusqlite = { version = "0.39", features = ["bundled"] }
base64 = "0.22"

[workspace.lints.clippy]
# Curated set: high-signal lints we enforce across the workspace. Adding
# to this list means new code (and existing code touched by a PR) must
# satisfy the lint. Removing one needs an explicit reason in the PR
# description.
#
# Notably NOT enforced: unwrap_used / expect_used / panic — those are
# conventional in test code (every #[test] body uses them) and in
# compile-time-constant regex bootstraps; warning on them produces
# noise that drowns out real findings.
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
redundant_closure = "warn"
map_unwrap_or = "warn"
manual_map = "warn"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
