[package]
name = "scrump-core"
description = "Core traits and types for the scrump secret scrubber."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
regex.workspace = true

[lints]
workspace = true
