[package]
name = "scrump-format-hprof"
description = "Java HPROF heap dump handler for scrump."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
byteorder.workspace = true
scrump-core = { path = "../scrump-core", version = "0.1.7" }

[lints]
workspace = true
