[package]
name = "scrump-format-passthrough"
description = "Fallback format: treats any file as a single scannable chunk."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
scrump-core = { path = "../scrump-core", version = "0.1.0" }

[lints]
workspace = true
