[package]
name = "scrump-format-pcap"
description = "tcpdump pcap + pcapng capture-file handler for scrump."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
byteorder.workspace = true
scrump-core = { path = "../scrump-core", version = "0.1.0" }

[lints]
workspace = true
