[package]
name = "scrump-format-perf"
description = "perf.data handler for scrump."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
linux-perf-data.workspace = true
byteorder.workspace = true
scrump-core = { path = "../scrump-core", version = "0.1.8" }

[lints]
workspace = true
