[package]
name = "scrump-format-sqlite"
description = "SQLite database handler for scrump."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
rusqlite.workspace = true
scrump-core = { path = "../scrump-core", version = "0.1.0" }

[lints]
workspace = true
