[package]
name = "scrump-presidio-compat"
description = "Run Microsoft Presidio's test corpus through scrump, embedded in every supported binary format."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "presidio-extract"
path = "src/bin/presidio_extract.rs"

[[bin]]
name = "presidio-compat"
path = "src/bin/presidio_compat.rs"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json = "1"
serde_yaml.workspace = true
byteorder.workspace = true
tar.workspace = true
flate2.workspace = true
rusqlite.workspace = true
scrump-core = { path = "../scrump-core", version = "0.1.7" }
scrump-detect = { path = "../scrump-detect", version = "0.1.7" }
scrump-rules = { path = "../scrump-rules", version = "0.1.7" }
scrump-test-fixtures = { path = "../scrump-test-fixtures", version = "0.1.7" }
scrump-format-passthrough = { path = "../scrump-format-passthrough", version = "0.1.7" }
scrump-format-perf = { path = "../scrump-format-perf", version = "0.1.7" }
scrump-format-tar = { path = "../scrump-format-tar", version = "0.1.7" }
scrump-format-sqlite = { path = "../scrump-format-sqlite", version = "0.1.7" }
scrump-format-nsys = { path = "../scrump-format-nsys", version = "0.1.7" }
scrump-format-core = { path = "../scrump-format-core", version = "0.1.7" }
scrump-format-hprof = { path = "../scrump-format-hprof", version = "0.1.7" }
scrump-format-jfr = { path = "../scrump-format-jfr", version = "0.1.7" }
scrump-format-pcap = { path = "../scrump-format-pcap", version = "0.1.7" }

[lints]
workspace = true
