[package]
name = "scrump-rules"
description = "Default ruleset and YAML loader for scrump detectors."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
regex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
base64.workspace = true
scrump-core = { path = "../scrump-core", version = "0.1.0" }

[lints]
workspace = true
